since 1.3
=========
- Implement save/load Oasis format
- Allow to sort without respect case
- Validation: allow to display or not message
- Add new dcop function
- Start to port KSpread_undo to kcommand
- Add combobox to search area name

Changes from 1.3
================
- multiple steps undo and redo
- fix problem where hidden sheet is simply appended in the tab bar
  (when it is shown again).



since 1.3 RC1
=============
- fix display of text starting with a single quote
- fix problem formatting the whole row (#65504)
- make the top/middle/bottom alignment buttons work
- fix problem with reference from another sheet (bug #60455)
- show indicator of chosen/selected cells (bug #58098)
- hide in-place cell editing when choosing other sheet
- proper zoom and display of formatted hyperlink (#66214)
- fix flickering problem with many hyperlinks (#65501)
- don't crash when leaving the preview in Konq (#65928)
- fix redraw problem with Print Preview (#60147)
- support only one zoom for two or more views
- fix painting problem with multiple views
- prevent possible crash with conditional formatting (#58713)
- fix dependency problem with automatic recalculation (#58097)
- better adjustment of cell references on cut&paste
- fix crash on csv import (#66047)
- fix problem for cells copy/cut to clipboard (#58712)
- show frame when embedded object is selected (#37152)
- better handling of "nothing to print" warning (#60147)
- when embedded, use real zoom instead of scaling (#45503)
- fix data sorting (#63317)

since 1.3 beta4
===============
- #64794: kspread problem with calculating dates
- #61570: cell border does not work with merged cells
- fix unsorted zoom values (#64154)

since 1.3 beta3
===============
- KSpread is slow during text to column conversion (#59999)
- fix problem cycling absolute cell reference with F4 key (#46959)
- the calculator plugin saves its configuration now (#49954)
- fix detection of sheet direction (for rtl support)

since 1.3 beta2