@@ -6,6 +6,7 @@ since 1.3
 - Add new dcop function
 - Start to port KSpread_undo to kcommand
 - Add combobox to search area name
+- Add Help Message as in oocalc
 
 Changes from 1.3
 ================
